# self_knowledge_agent

./: .gitignore  README.md  init  main.py  pyproject.toml  requirements.txt  个人知识库Agent产品设计文档.docx
.trae/documents/: architecture.md  prd.md
config/: config.example.yaml  config.yaml
config/prompts/: query_rewrite.yaml  rag_answer.yaml
data/sqlite/: agent.db
data/vector_store/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  Sidebar.tsx  Toasts.tsx  Topbar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Maintenance.tsx  Memory.tsx  Privacy.tsx  Processing.tsx  Profile.tsx  UserDetail.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
scripts/: init_db.py  migrate_profile.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/db/: __init__.py  cache.py  graph_store.py  session.py  vector_store.py
src/db/models/: __init__.py  conversation.py  document.py  memory.py  tag.py  user.py  user_profile.py
src/modules/auth/: router.py  service.py
src/modules/ingestion/: preprocessor.py  router.py  service.py
src/modules/interaction/: agent.py  router.py  service.py
src/modules/maintenance/: router.py  service.py
src/schemas/: __init__.py  auth.py  common.py  conversation.py  document.py  memory.py
src/utils/: __init__.py  datetime_utils.py  file_utils.py  text_utils.py
tests/: test_llm_integration.py  test_providers.py
(+19 files in other folders)
