[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-knowledge-agent"
version = "0.1.0"
description = "个人数据知识库 Agent - 数字知识伙伴"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Self Knowledge Agent Team" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
